Added piece movement. I apologize for the wait.